--- a/drag.html
+++ b/drag.html
@@ -4,8 +4,14 @@
 		<meta charset="utf-8">
 		<title></title>
 	</head>
+	<style type="text/css" media="screen">
+		#div1{width: 200px; height:200px; background:blue; position:absolute;}
+	</style>
+	<script src="drag.js"></script>
 	<body>
-		git  分支的咩咩咩
-		这里是new1
+		<div id="div1"></div>
 	</body>
+	<script>
+	drag('div1');
+	</script>
 </html>
