--- a/project/1000zhu/首页/index.html
+++ b/project/1000zhu/首页/index.html
@@ -53,7 +53,7 @@
     <section class="video">
         <div class="swiper-container">
             <div class="swiper-wrapper">
-                <div class="swiper-slide nth5">
+                <div class="swiper-slide nth1">
                     <div class="box">
                         <div class="top">
                             <em class="d-dot"></em>
@@ -62,6 +62,15 @@
                         <div class="mid"></div>
                         <div class="bottom">为您创造价值，我们永恒的目标</div>
                         <div class="bottom-icon"></div>
+                    </div>
+                </div>
+                <div class="swiper-slide nth2">
+                    <div class="box">
+                        <div class="left"></div>
+                        <div class="right">
+                            <span>年专注，网站建设</span><i></i>
+                            <p>始于 2008 - 2017 展望未来<br />专注于设计体验，专业于解决方案</p>
+                        </div>
                     </div>
                 </div>
             </div>
