--- a/project/1000zhu/首页/index.html
+++ b/project/1000zhu/首页/index.html
@@ -73,6 +73,13 @@
                         </div>
                     </div>
                 </div>
+                <div class="swiper-slide nth3">
+                    <div class="box">
+                        <div class="top">技术派，论研发</div>
+                        <div class="mid"></div>
+                        <div class="bottom">我说，业界没有最好的技术，只有最棒的技术开发者<br />定制研发，为您的客户和团队</div>
+                    </div>
+                </div>
             </div>
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
