--- a/project/1000zhu/首页/index.html
+++ b/project/1000zhu/首页/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="网站建设|网站制作|网站设计|高端网站建设" />
     <meta name="keywords" content="网站建设|网站制作|网站设计|高端网站建设" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no" />
-    <meta name="copyright" content="Copyright 1000zhu.com 版权所有" />
+    <meta name="copyright" content="" />
     <link href="plugin/ui/css/bootstrap.min.css" rel="stylesheet" />
     <link href="plugin/swiper3d/idangerous.swiper.3dflow.css" rel="stylesheet" />
     <link href="css/index.min.css" rel="stylesheet" />
