--- a/project/1000zhu/内页/企业网站建设.html
+++ b/project/1000zhu/内页/企业网站建设.html
@@ -328,6 +328,7 @@
                         <div class="li_tit">客户留言系统</div>
                     </li>
                 </ul>
+                    <div class="clear"></div>
                     </div>
                </div> 
             </div>    
